--- a/app/src/main/res/layout/activity_cpuselection.xml
+++ b/app/src/main/res/layout/activity_cpuselection.xml
@@ -25,7 +25,7 @@
         app:srcCompat="@drawable/intersec" />
 
     <TextView
-        android:id="@+id/textView27"
+        android:id="@+id/Type"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="108dp"
@@ -73,7 +73,7 @@
                     app:layout_constraintTop_toTopOf="parent">
 
                     <TextView
-                        android:id="@+id/textView1"
+                        android:id="@+id/CPU_Price"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="20dp"
@@ -84,7 +84,7 @@
                         android:textStyle="bold" />
 
                     <Button
-                        android:id="@+id/button1"
+                        android:id="@+id/CPUSelect"
                         android:layout_width="76dp"
                         android:layout_height="34dp"
                         android:layout_marginLeft="35dp"
@@ -97,7 +97,7 @@
                         android:textStyle="bold" />
 
                     <TextView
-                        android:id="@+id/textView2"
+                        android:id="@+id/CPU_Detail"
                         android:layout_width="242dp"
                         android:layout_height="207dp"
                         android:layout_marginStart="160dp"
@@ -108,7 +108,7 @@
                         android:textStyle="bold" />
 
                     <ImageView
-                        android:id="@+id/imageView1"
+                        android:id="@+id/CPU_Image"
                         android:layout_width="115dp"
                         android:layout_height="116dp"
                         android:layout_marginLeft="20dp"
@@ -124,7 +124,7 @@
                         app:srcCompat="@drawable/cpucard" />
 
                     <TextView
-                        android:id="@+id/textView3"
+                        android:id="@+id/CPU_Name"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="90dp"
@@ -203,7 +203,7 @@
                         app:srcCompat="@drawable/cpucard" />
 
                     <TextView
-                        android:id="@+id/textView16"
+                        android:id="@+id/Build_No"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="90dp"
