--- a/app/src/main/res/layout/activity_saved_config.xml
+++ b/app/src/main/res/layout/activity_saved_config.xml
@@ -57,7 +57,7 @@
                     app:layout_constraintTop_toTopOf="parent">
 
                     <TextView
-                        android:id="@+id/textView16"
+                        android:id="@+id/Build_No"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="90dp"
@@ -68,7 +68,7 @@
                         android:textStyle="bold" />
 
                     <TextView
-                        android:id="@+id/textView12"
+                        android:id="@+id/Build_Tot"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="250dp"
@@ -104,7 +104,7 @@
                         app:srcCompat="@drawable/carddot3" />
 
                     <TextView
-                        android:id="@+id/textView7"
+                        android:id="@+id/Build_Detail"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="20dp"
@@ -116,7 +116,7 @@
                         android:textStyle="bold" />
 
                     <Button
-                        android:id="@+id/button14"
+                        android:id="@+id/Update_Btn"
                         android:layout_width="71dp"
                         android:layout_height="36dp"
                         android:layout_marginLeft="270dp"
@@ -128,7 +128,7 @@
                         android:textStyle="bold" />
 
                     <Button
-                        android:id="@+id/button17"
+                        android:id="@+id/Delete_Btn"
                         android:layout_width="71dp"
                         android:layout_height="36dp"
                         android:layout_marginLeft="270dp"
