--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -4,19 +4,52 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ForgotPassword">
+    android:background="@drawable/hback"
+    tools:context=".Activity.ForgotPassword">
+
+    <ImageView
+        android:id="@+id/imageView29"
+        android:layout_width="417dp"
+        android:layout_height="567dp"
+        android:layout_marginTop="136dp"
+        android:background="@drawable/intersectionew3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView30"
+        android:layout_width="436dp"
+        android:layout_height="648dp"
+        android:layout_marginTop="112dp"
+        android:layout_marginEnd="4dp"
+        android:background="@drawable/intersectionew2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginRight="4dp" />
+
+    <ImageView
+        android:id="@+id/imageView31"
+        android:layout_width="368dp"
+        android:layout_height="636dp"
+        android:layout_marginStart="84dp"
+        android:layout_marginTop="136dp"
+        android:background="@drawable/intersectionew1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginLeft="84dp" />
 
     <TextView
         android:id="@+id/textView11"
         android:layout_width="254dp"
         android:layout_height="88dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="28dp"
         android:text="Forgot Your Password?"
-        android:textColor="#2196F3"
+        android:textColor="#FFFFFF"
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.222"
+        app:layout_constraintHorizontal_bias="0.152"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -24,58 +57,66 @@
         android:id="@+id/imageView4"
         android:layout_width="148dp"
         android:layout_height="111dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="32dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.463"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView11"
+        app:layout_constraintTop_toBottomOf="@+id/textView13"
         app:srcCompat="@drawable/confuse" />
 
     <TextView
         android:id="@+id/textView13"
         android:layout_width="363dp"
         android:layout_height="54dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="8dp"
         android:text="Don't Worry! Just fill in your email and we'll send you a link to reset your password."
+        android:textColor="#000000"
         android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView4" />
+        app:layout_constraintTop_toBottomOf="@+id/textView11" />
 
     <EditText
-        android:id="@+id/editTextTextEmailAddress"
+        android:id="@+id/reset"
         android:layout_width="254dp"
         android:layout_height="56dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="24dp"
         android:drawableStart="@drawable/ic_baseline_email_24"
         android:drawablePadding="16dp"
         android:ems="10"
         android:hint="Enter Your Email Address"
         android:inputType="textEmailAddress"
+        android:textColorHighlight="#FFFFFF"
+        android:textColorLink="#000000"
+        android:textCursorDrawable="@color/colorPrimaryDark"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView13" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView4" />
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/sendLinkBtn"
         android:layout_width="167dp"
         android:layout_height="48dp"
         android:layout_marginTop="24dp"
         android:background="#2196F3"
         android:text="Send Link"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />
+        app:layout_constraintTop_toBottomOf="@+id/reset" />
 
     <Button
-        android:id="@+id/back"
+        android:id="@+id/backLoginBtn"
         android:layout_width="150dp"
         android:layout_height="42dp"
         android:layout_marginTop="20dp"
         android:background="#FFFFFF"
         android:text="Back to Login"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button4" />
+        app:layout_constraintTop_toBottomOf="@+id/sendLinkBtn" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
