--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -4,7 +4,40 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".UserProfile">
+    android:background="@drawable/hback"
+    tools:context=".Activity.UserProfileActivity">
+
+    <ImageView
+        android:id="@+id/imageView29"
+        android:layout_width="417dp"
+        android:layout_height="567dp"
+        android:layout_marginTop="136dp"
+        android:background="@drawable/intersectionew3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView30"
+        android:layout_width="436dp"
+        android:layout_height="648dp"
+        android:layout_marginTop="112dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginRight="4dp"
+        android:background="@drawable/intersectionew2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView31"
+        android:layout_width="368dp"
+        android:layout_height="636dp"
+        android:layout_marginStart="84dp"
+        android:layout_marginLeft="84dp"
+        android:layout_marginTop="136dp"
+        android:background="@drawable/intersectionew1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView4"
@@ -13,7 +46,7 @@
         android:layout_marginTop="16dp"
         android:fontFamily="sans-serif"
         android:text="Welcome to Profile"
-        android:textColor="#2196F3"
+        android:textColor="#FFFFFF"
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -32,107 +65,90 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/profile_icon" />
 
+
     <TextView
-        android:id="@+id/textView5"
-        android:layout_width="245dp"
-        android:layout_height="24dp"
+        android:id="@+id/tvUserProfileName"
+        android:layout_width="268dp"
+        android:layout_height="29dp"
         android:layout_marginStart="50dp"
         android:layout_marginLeft="50dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="64dp"
         android:layout_marginEnd="50dp"
         android:layout_marginRight="50dp"
         android:drawableStart="@drawable/ic_baseline_person_24"
+        android:drawableLeft="@drawable/ic_baseline_person_24"
         android:drawablePadding="16dp"
         android:text="Shehani Wageesha"
+        android:textColor="#000000"
+        android:textSize="16sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.424"
+        app:layout_constraintHorizontal_bias="0.79"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+        app:layout_constraintTop_toBottomOf="@+id/divider" />
 
     <TextView
-        android:id="@+id/textView6"
-        android:layout_width="245dp"
-        android:layout_height="26dp"
+        android:id="@+id/tvUserProfileEmail"
+        android:layout_width="266dp"
+        android:layout_height="30dp"
         android:layout_marginStart="50dp"
         android:layout_marginLeft="50dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="50dp"
         android:layout_marginRight="50dp"
         android:drawableStart="@drawable/ic_baseline_email_24"
+        android:drawableLeft="@drawable/ic_baseline_email_24"
         android:drawablePadding="16dp"
         android:text="shehaniwageesha@gmail.com"
+        android:textColor="#000000"
+        android:textSize="16sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.424"
+        app:layout_constraintHorizontal_bias="0.755"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView5" />
-
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_width="246dp"
-        android:layout_height="23dp"
-        android:layout_marginStart="50dp"
-        android:layout_marginLeft="50dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="50dp"
-        android:layout_marginRight="50dp"
-        android:background="#00FFFFFF"
-        android:drawableStart="@drawable/ic_baseline_phone_24"
-        android:drawablePadding="16dp"
-        android:text="+9471234567"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.446"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView6" />
-
-    <TextView
-        android:id="@+id/textView10"
-        android:layout_width="244dp"
-        android:layout_height="28dp"
-        android:layout_marginTop="8dp"
-        android:drawableStart="@drawable/ic_baseline_lock_24"
-        android:drawablePadding="16dp"
-        android:inputType="textPassword"
-        android:text="sheha123"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.473"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView7" />
+        app:layout_constraintTop_toBottomOf="@+id/tvUserProfileName" />
 
     <Button
         android:id="@+id/button2"
         android:layout_width="185dp"
         android:layout_height="28dp"
-        android:layout_marginTop="36dp"
-        android:background="#90C1E8"
+        android:layout_marginStart="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="28dp"
+        android:background="#2196F3"
         android:drawableStart="@drawable/ic_baseline_edit_24"
+        android:drawableLeft="@drawable/ic_baseline_edit_24"
         android:drawablePadding="1dp"
         android:text="Update Information"
-        app:layout_constraintEnd_toStartOf="@+id/button3"
-        app:layout_constraintHorizontal_bias="0.55"
+        android:textColor="#000000"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView15" />
+        app:layout_constraintTop_toBottomOf="@+id/tvUserProfilePostalCode" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/btnDeleteAccount"
         android:layout_width="150dp"
         android:layout_height="30dp"
-        android:layout_marginTop="36dp"
-        android:layout_marginEnd="36dp"
-        android:layout_marginRight="36dp"
-        android:background="#90C1E8"
+        android:layout_marginTop="28dp"
+        android:background="#2196F3"
         android:drawableStart="@drawable/ic_baseline_delete_24"
+        android:drawableLeft="@drawable/ic_baseline_delete_24"
         android:drawablePadding="1dp"
         android:text="Delete Account"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView15" />
+        app:layout_constraintHorizontal_bias="0.714"
+        app:layout_constraintStart_toEndOf="@+id/button2"
+        app:layout_constraintTop_toBottomOf="@+id/tvUserProfilePostalCode" />
 
     <View
         android:id="@+id/divider"
         android:layout_width="445dp"
         android:layout_height="2dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="48dp"
         android:background="?android:attr/listDivider"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
@@ -142,122 +158,107 @@
         tools:layout_editor_absoluteX="157dp"
         tools:layout_editor_absoluteY="415dp" />
 
-    <TextView
-        android:id="@+id/textView14"
-        android:layout_width="161dp"
-        android:layout_height="29dp"
-        android:layout_marginTop="8dp"
-        android:background="#00FFFFFF"
-        android:drawableStart="@drawable/ic_baseline_card_giftcard_24"
-        android:drawablePadding="16dp"
-        android:text="My Orders"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.316"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView23" />
-
-    <TextView
-        android:id="@+id/textView15"
-        android:layout_width="155dp"
-        android:layout_height="33dp"
-        android:layout_marginTop="8dp"
-        android:background="#00FFFFFF"
-        android:drawableStart="@drawable/ic_baseline_favorite_24"
-        android:drawablePadding="16dp"
-        android:text="Wishlist"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.308"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView14" />
-
     <Button
-        android:id="@+id/button8"
+        android:id="@+id/btnLogout"
         android:layout_width="141dp"
         android:layout_height="30dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="24dp"
         android:background="#FFFFFF"
         android:text="Logout"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button2"
-        app:layout_constraintVertical_bias="0.0" />
-
-    <ImageView
-        android:id="@+id/imageView5"
-        android:layout_width="34dp"
-        android:layout_height="29dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/textView14"
-        app:layout_constraintTop_toBottomOf="@+id/imageView7"
-        app:srcCompat="@drawable/ic_baseline_chevron_right_24" />
-
-    <ImageView
-        android:id="@+id/imageView7"
-        android:layout_width="30dp"
-        android:layout_height="35dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.081"
-        app:layout_constraintStart_toEndOf="@+id/textView15"
-        app:layout_constraintTop_toBottomOf="@+id/textView23"
-        app:srcCompat="@drawable/ic_baseline_chevron_right_24" />
+        app:layout_constraintVertical_bias="0.038" />
 
     <TextView
         android:id="@+id/textView20"
-        android:layout_width="331dp"
-        android:layout_height="34dp"
-        android:layout_marginTop="12dp"
-        android:background="#FFFFFF"
-        android:text="Payment Details"
-        android:textColor="#2196F3"
+        android:layout_width="414dp"
+        android:layout_height="37dp"
+        android:text="  Payment Details"
+        android:textColor="#FFFFFF"
+        android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.275"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView10" />
+        app:layout_constraintTop_toBottomOf="@+id/tvUserProfileEmail" />
 
     <TextView
-        android:id="@+id/textView21"
-        android:layout_width="244dp"
-        android:layout_height="22dp"
-        android:layout_marginTop="8dp"
+        android:id="@+id/textView10"
+        android:layout_width="407dp"
+        android:layout_height="36dp"
+        android:layout_marginTop="16dp"
+        android:text="  Personal Details"
+        android:textColor="#FFFFFF"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/divider" />
+
+    <TextView
+        android:id="@+id/tvUserProfilePaymentType"
+        android:layout_width="238dp"
+        android:layout_height="32dp"
+        android:drawableStart="@drawable/ic_baseline_credit_card_24"
+        android:drawablePadding="16dp"
+        android:inputType="text"
+        android:text="Payment type"
+        android:textColor="#000000"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView20"
+        android:drawableLeft="@drawable/ic_baseline_credit_card_24" />
+
+    <TextView
+        android:id="@+id/tvUserProfilePayment"
+        android:layout_width="238dp"
+        android:layout_height="32dp"
+        android:layout_marginTop="20dp"
         android:drawableStart="@drawable/ic_baseline_credit_card_24"
         android:drawablePadding="16dp"
         android:inputType="number"
         android:text="1000-1234-5678-9010"
+        android:textColor="#000000"
+        android:textSize="16sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.467"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView20" />
+        app:layout_constraintTop_toBottomOf="@+id/tvUserProfilePaymentType" />
 
     <TextView
-        android:id="@+id/textView22"
-        android:layout_width="239dp"
-        android:layout_height="24dp"
-        android:layout_marginTop="8dp"
+        android:id="@+id/tvUserProfileAddress"
+        android:layout_width="243dp"
+        android:layout_height="32dp"
+        android:layout_marginTop="12dp"
         android:drawableStart="@drawable/ic_baseline_home_24"
         android:drawablePadding="16dp"
         android:text="123, Main Street"
+        android:textColor="#000000"
+        android:textSize="16sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.459"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView21" />
+        app:layout_constraintTop_toBottomOf="@+id/tvUserProfilePayment"
+        android:drawableLeft="@drawable/ic_baseline_home_24" />
 
     <TextView
-        android:id="@+id/textView23"
-        android:layout_width="240dp"
-        android:layout_height="29dp"
-        android:layout_marginTop="8dp"
+        android:id="@+id/tvUserProfilePostalCode"
+        android:layout_width="238dp"
+        android:layout_height="31dp"
+        android:layout_marginTop="16dp"
         android:drawableStart="@drawable/ic_baseline_post_add_24"
         android:drawablePadding="16dp"
         android:text="50100"
+        android:textColor="#000000"
+        android:textSize="16sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.461"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView22" />
+        app:layout_constraintTop_toBottomOf="@+id/tvUserProfileAddress"
+        android:drawableLeft="@drawable/ic_baseline_post_add_24" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
