part update delete function

--- a/app/src/main/res/layout/activity_add_part.xml
+++ b/app/src/main/res/layout/activity_add_part.xml
@@ -151,6 +151,7 @@
         android:ems="10"
         android:inputType="textPersonName"
         android:text=""
+        android:textColor="@color/colorPrimaryDark"
         app:layout_constraintBottom_toBottomOf="@+id/text_partName"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -162,6 +163,7 @@
         android:autofillHints=""
         android:background="@drawable/input1"
         android:ems="10"
+        android:textColor="@color/colorPrimaryDark"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="@+id/text_partPrice"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -176,6 +178,7 @@
         android:ems="10"
         android:gravity="start|top"
         android:inputType="textMultiLine"
+        android:textColor="@color/colorPrimaryDark"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/text_partDescription" />
 
