--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -170,6 +170,7 @@
             android:layout_width="115dp"
             android:layout_height="110dp"
             android:layout_marginStart="16dp"
+            android:hint="Processor"
             android:background="@drawable/processor"
             app:layout_constraintStart_toEndOf="@+id/button3"
             app:layout_constraintTop_toTopOf="@+id/button3"/>
@@ -181,6 +182,7 @@
             android:layout_width="115dp"
             android:layout_height="110dp"
             android:layout_marginStart="16dp"
+            android:hint="MotherBoard"
             android:background="@drawable/motherboard1"
             app:layout_constraintStart_toEndOf="@+id/button4"
             app:layout_constraintTop_toTopOf="@+id/button4"
@@ -193,6 +195,7 @@
             android:layout_height="110dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
+            android:hint="Power Supply"
             android:background="@drawable/powersupply1"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/partsname_casings"
@@ -203,6 +206,7 @@
             android:layout_width="115dp"
             android:layout_height="110dp"
             android:layout_marginStart="16dp"
+            android:hint="Ram Card"
             android:background="@drawable/ramcard1"
             app:layout_constraintStart_toEndOf="@+id/button10"
             app:layout_constraintTop_toTopOf="@+id/button10"
