--- a/app/src/main/res/layout/activity_bottomnavbar.xml
+++ b/app/src/main/res/layout/activity_bottomnavbar.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".bottomNavbar.bottomanavbar">
+    tools:context=".bottomNavbar.bottomnavbar">
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/mainNav"
