--- a/app/src/main/res/layout/activity_viewparts.xml
+++ b/app/src/main/res/layout/activity_viewparts.xml
@@ -1,35 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#414343"
+    android:orientation="vertical"
     tools:context=".viewparts">
 
     <TextView
         android:id="@+id/categorynametxt"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="#414343"
+        android:background="#5D7C7C"
         android:fontFamily="@font/doppio_one"
-        android:paddingLeft="8dp"
+        android:paddingTop="4dp"
+        android:paddingLeft="16dp"
         android:text="Category Name"
-        android:textStyle="bold"
         android:textColor="@color/textColor"
         android:textSize="24sp"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:textStyle="bold" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/partRecycleView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/categorynametxt"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginTop="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/categorynametxt" />
+        android:layout_height="wrap_content"
+        />
 
-
-</RelativeLayout>
+</LinearLayout>
