--- a/app/src/main/res/layout/layout_singlerowpart.xml
+++ b/app/src/main/res/layout/layout_singlerowpart.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/parentRelativeLayout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="#414343"
     android:padding="8dp">
 
@@ -11,7 +11,11 @@
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="130dp"
-            app:cardBackgroundColor="#636363">
+            app:cardBackgroundColor="#636363"
+            app:cardCornerRadius="6dp"
+            app:cardUseCompatPadding="true"
+            app:cardElevation="3dp"
+            >
 
                 <ImageView
                     android:id="@+id/recycleImg"
@@ -47,7 +51,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="170dp"
                     android:layout_marginTop="80dp"
-                    android:onClick="selectBtn"
+                    android:onClick="selectImage"
                     android:text="Select" />
 
         </androidx.cardview.widget.CardView>
